--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "shrink",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "backend/app.js",
   "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.js"
+    "dev": "nodemon backend/app.js",
+    "build": "npm install --prefix ./frontend && npm run build --prefix ./frontend && npm install --prefix ./backend"
   },
   "keywords": [],
   "author": "",
